[LJI-46] Implemented security strategy for company admin (#45)
* [LJI-38] Created ClaimController endpoint security TODO: fix internal server errors for user and insadmin, implement custom authorization filter

* [LJI-38] Implemented endpoint security for insuranceAdmin and user for all controllers

* [LJI-46] Implemented security strategy for company admin

* [LJI-46] all endpoint security for admin, company admin and user

* [LJI-46] Did minor adjustements in SecurityService, fixed bug in employee filtering, made sure that company admin can fetch all claims and employees of his company but default filter is used

* [LJI-46] Filtering adjustments for company admin